--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "knex": "^0.13.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
-    "pg": "^6.2.4"
+    "pg": "^6.2.4",
+    "socket.io": "^2.0.3"
   }
 }
