--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
     "pg": "^6.2.4",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "underscore": "^1.8.3"
   }
 }
